# basic-rust-api

./: Cargo.toml  gen.sh
migration/src/: lib.rs  m20260128_082306_create_user_table.rs
src/: main.rs
src/common/: errors.rs  mod.rs
src/common/database/: postgres.rs
src/common/utils/: cookies.rs  jwt.rs  mod.rs  validated_json_req.rs
src/entities/: user.rs
src/modules/auth/: mod.rs
src/modules/auth/controllers/: con.rs
src/modules/auth/dto/: req.rs
src/modules/auth/repositories/: repo.rs
src/modules/auth/usecases/: usecases.rs
src/routes/: routes.rs
