[package]
name = "my_api_rust"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }


axum-cookie = "0.2.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.43"
